--- a/pom.xml
+++ b/pom.xml
@@ -1,30 +1,72 @@
-<!-- Add below artifact ID -->
-<packaging>war</packaging>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>org.springframework</groupId>
+    <artifactId>hello-world-mavenn</artifactId>
+    <packaging>jar</packaging>
+    <version>1.0-SNAPSHOT</version>
 
+    <!-- tag::joda[] -->
+     <properties>
+           <java.version>1.8</java.version>
+           <maven.compiler.source>1.6</maven.compiler.source>
+           <maven.compiler.target>1.6</maven.compiler.target>
+         <sonar.host.url>http://localhost:9000/</sonar.host.url>
+     </properties>
 
-<!-- Add it inside Plugins tag -->
-<plugin>
-	<groupId>org.jacoco</groupId>
-	<artifactId>jacoco-maven-plugin</artifactId>
-	<version>0.8.6</version>
-	<executions>
-		<execution>
-			<goals>
-				<goal>prepare-agent</goal>
-			</goals>
-	</execution>
-	<execution>
-	  <id>report</id>
-		<phase>prepare-package</phase>
-			<goals>
-				<goal>report</goal>
-			</goals>
-		</execution>
-	</executions>
-</plugin>
-
-<plugin>
-	<groupId>org.sonarsource.scanner.maven</groupId>
-	<artifactId>sonar-maven-plugin</artifactId>
-	<version>3.8.5</version>
-</plugin>
+   <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>test</scope>
+    </dependency>
+  
+           <dependency>
+               <groupId>joda-time</groupId>
+               <artifactId>joda-time</artifactId>
+               <version>2.2</version>
+           </dependency>
+       </dependencies>
+       <!-- end::joda[] -->
+    
+       <distributionManagement>
+        <repository>
+          <id>nexus</id>
+          <name>Releases Nexus Repository</name>
+          <url>http://localhost:8081/repository/pipeline_release_test1/</url>
+        </repository>
+        <snapshotRepository>
+          <id>nexus</id>
+          <name>Snapshot Nexus Repository </name>
+           <url>http://localhost:8081/repository/pipeline_snapshot_test1/</url>
+        </snapshotRepository>
+   </distributionManagement>
+    
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.1</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer
+                                    implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>HelloWorld</mainClass>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+</project>
